--- a/index.css
+++ b/index.css
@@ -25,6 +25,12 @@ body{
 .quotes p, .quotes h3{
     font-size: 1.5rem;
 }
+.button-container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top:50px;
+}
 @media(max-width:480px){
     .quotes p, .quotes h3{
         font-size: 1rem;
